; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_streams.c_streams_modify_assign.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_streams.c_streams_modify_assign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tagMSIVIEW = type { i32 }

@ERROR_SUCCESS = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.tagMSIVIEW*, i32*)* @streams_modify_assign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @streams_modify_assign(%struct.tagMSIVIEW* %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.tagMSIVIEW*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store %struct.tagMSIVIEW* %0, %struct.tagMSIVIEW** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %4, align 8
  %9 = bitcast %struct.tagMSIVIEW* %8 to i32*
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i64 @streams_find_row(i32* %10, i32* %11, i32* null)
  store i64 %12, i64* %7, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load i64, i64* @ERROR_SUCCESS, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %4, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = call i64 @streams_modify_update(%struct.tagMSIVIEW* %17, i32* %18)
  store i64 %19, i64* %3, align 8
  br label %25

20:                                               ; preds = %2
  %21 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %4, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i32, i32* @FALSE, align 4
  %24 = call i64 @STREAMS_insert_row(%struct.tagMSIVIEW* %21, i32* %22, i32 -1, i32 %23)
  store i64 %24, i64* %3, align 8
  br label %25

25:                                               ; preds = %20, %16
  %26 = load i64, i64* %3, align 8
  ret i64 %26
}

declare dso_local i64 @streams_find_row(i32*, i32*, i32*) #1

declare dso_local i64 @streams_modify_update(%struct.tagMSIVIEW*, i32*) #1

declare dso_local i64 @STREAMS_insert_row(%struct.tagMSIVIEW*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
